[package]
name = "lightning-storage"
version = "0.0.116"
authors = ["Elias Rohrer"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightningdevkit/rust-lightning"
description = """
Utilities for LDK data persistence and retrieval.
"""
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lightning = { version = "0.0.116", path = "../lightning", default-features = false, features = ["std"] }
rand = "0.8.5"
libc = "0.2"
